[tool.poetry]
name = "advent-of-code"
version = "0.0.0"
description = ""
authors = ["Buried-In-Code <BuriedInCode@tuta.io>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = [
  "py310",
]

[tool.isort]
default_section = "THIRDPARTY"
known_first_party = []
known_third_party = []
line_length = 100
multi_line_output = 3
profile = "black"
