[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {email = "BuriedInCode@tuta.io", name = "BuriedInCode"}
]
dependencies = [
  "rich >= 13.6.0"
]
description = ""
dynamic = []
keywords = []
license = {text = "MIT"}
name = "advent-of-code"
readme = "README.md"
requires-python = ">= 3.12"
version = "0.0.0"

[project.optional-dependencies]
dev = [
  "pre-commit >= 3.5.0"
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
fix = true
ignore = [
  "D",
  "EXE",
  "FBT",
  "INP001",
  "PLR2004",
  "S101",
  "T201",
  "TCH",
  "TRY300"
]
line-length = 100
output-format = "grouped"
select = ["ALL"]
show-fixes = true
target-version = "py312"
unsafe-fixes = true

[tool.ruff.flake8-annotations]
allow-star-arg-any = true
mypy-init-return = true

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.isort]
combine-as-imports = true

[tool.ruff.mccabe]
max-complexity = 18
